--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
     "zustand": "^4.5.4"
